Added basic redo functionality (improvements possible)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 			<div id="canvas-options">
 				<a href="#" onclick="undo()">Undo Draw</a>
+				<a href="#" onclick="redo()">Redo Draw</a>
 			</div>
 
 			<div id="canvas-container">
