Added beginning of move element function

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 				<a href="#" onclick="undo()">Undo Draw</a>
 				<a href="#" onclick="redo()">Redo Draw</a>
+				<a href="#" onclick="toggleMove()">Toggle move</a>
 
 				<select onchange="setLineWidth(this.value)">
   					<option value="2">2</option>
