--- a/index.html
+++ b/index.html
@@ -88,18 +88,42 @@
 					<i class="fa fa-paint-brush" aria-hidden="true"></i>
 				</div>
 
-				<div class="icon undo circle un" data-shape="text" title="text" onclick="textInput()">
+				<div class="icon undo circle un" data-shape="text" title="text">
 					<i class="fa fa-etsy" aria-hidden="true"></i>
 				</div>
+
+				<select id="fontSize" class="select-css" onchange="setFontSize(this.value)">
+					<option value="" selected disabled hidden>Font Size</option>
+					<option value="12">12px</option>
+					<option value="14">14px</option>
+					<option value="16">16px</option>
+					<option value="18">18px</option>
+					<option value="20">20px</option>
+					<option value="24">24px</option>
+					<option value="30">30px</option>
+					<option value="50">50px</option>
+					<option value="74">74px</option>
+				</select>
+
+				<select id="font" class="select-css" onchange="setTextFont(this.value)">
+					<option value="" selected disabled hidden>Text font</option>
+					<option value="Arial, Helvetica, sans-serif">Arial</option>
+					<option value="Verdana">Verdana</option>
+					<option value="Times New Roman">Times New Roman</option>
+					<option value="Courier New">Courier New</option>
+					<option value="serif">serif</option>
+					<option value="sans-serif">sans-serif</option>
+				</select>
 
 				<div class="icon undo iconTwo circle re" data-shape="save" onclick="savePainting()">
 					<i class="fa fa-save" aria-hidden="true"></i>
 				</div>
 
+				<!--
 				<div class="icon undo iconTwo circle" data-shape="load">
 					<i class="fa fa-upload" aria-hidden="true"></i>
 				</div>
-				<!--
+
 				<select class="select-css" onchange="setPencilType(this.value)">
 					<option value="pencil">Pencil</option>
 					<option value="line">Line</option>
