Split into multiple files

--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
 		</div>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js" charset="utf-8"></script>
-		<script src="drawio.js"></script>
-		<script src="icon.js"></script>
+		<script src="js/init.js"></script>
 	</body>
 
 </html>
